FDG-5325 Fixed column shifting on bold.

--- a/src/components/site-header/site-header.module.scss
+++ b/src/components/site-header/site-header.module.scss
@@ -162,6 +162,7 @@
     flex-flow: column nowrap;
     justify-content: center;
     margin: 2rem 0 2rem 6rem;
+    width: 10rem;
   }
 
   .dropdownTitle {
